--- a/2_data_cleaning_word2vec.ipynb
+++ b/2_data_cleaning_word2vec.ipynb
@@ -60,6 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# functions from https://www.kaggle.com/reiinakano/basic-nlp-bag-of-words-tf-idf-word2vec-lstm\n",
     "class MyTokenizer:\n",
     "    def __init__(self):\n",
     "        pass\n",
