--- a/paper/acl2018.bib
+++ b/paper/acl2018.bib
@@ -5,3 +5,12 @@
   pages={119--123},
   year={2016}
 }
+
+@inproceedings{bar2017stance,
+  title={Stance Classification of Context-Dependent Claims},
+  author={Bar-Haim, Roy and Bhattacharya, Indrajit and Dinuzzo, Francesco and Saha, Amrita and Slonim, Noam},
+  booktitle={Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics: Volume 1, Long Papers},
+  volume={1},
+  pages={251--261},
+  year={2017}
+}
