--- a/paper/acl2018.tex
+++ b/paper/acl2018.tex
@@ -117,7 +117,7 @@ Random Forests & .809 & 47.5 \\
 \end{center}
 \end{table}
 
-Considering there are only two classes, this accuracy is very bad and we aren't able to determine better than chance at the stance of a specific claim.  The code for this section is 4_stance_detection.ipynb
+Considering there are only two classes, this accuracy is very bad and we aren't able to determine better than chance at the stance of a specific claim.  The code for this section is 4\_stance\_detection.ipynb
 
 The next hypothesis we had is that instead of containing similar words or sentence embeddings, claims and targets can be classified by using their sentiment.  The hypothesis would be as follows:  Claim that have a similar sentiment as a topic will be PRO and divergent sentiment will be CON.  This idea is summarized in the following table:
 
